--- a/lambda/public/index.html
+++ b/lambda/public/index.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guitar Tuning Skills</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    
+    <!-- fontAwesome -->
+    <script src="https://kit.fontawesome.com/08cb6ddf08.js" crossorigin="anonymous"></script>
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
+
+    <title>Alexa Guitar Tuner</title>
 </head>
+
 <body>
-    <header>
-        <h1>Guitar Tuning Skills</h1>
-        <p>Your go-to guide for tuning any guitar!</p>
-    </header>
-    <main>
-        <div class="section">
-            <h2>About Me</h2>
-            <p>Hi! I'm passionate about guitar music and have years of experience tuning guitars for different genres and playing styles.</p>
+    <!-- Navbar -->
+    <div class="container-fluid p-3" id="navbar">
+        <div class="row">
+            <div class="col-1">
+                <a href="index.html" alt="homepage">
+                    <h2><i class="fa-solid fa-house"></i></h2>
+                </a>
+            </div>
+            <div class="col-10 text-center">
+                <h1 id="navbar-title">GIMM 340 Alexa Skill</h1>
+            </div>
+            <div class="col-1"></div>
         </div>
-        <div class="section">
-            <h2>Skills</h2>
-            <ul>
-                <li>Standard tuning (E A D G B e)</li>
-                <li>Drop D tuning (D A D G B e)</li>
-                <li>Open tunings (Open G, Open D, etc.)</li>
-                <li>Custom tunings for specific songs</li>
-                <li>Intonation adjustment and string care</li>
-            </ul>
+    </div>
+
+    <!-- Header -->
+    <div class="container-fluid text-center my-5">
+        <h1 id="header">Alexa Guitar Tuner</h1>
+        <h3 class="text-muted">"No Tuner? No Problem."</h3>
+    </div>
+
+    <!-- What is this? Section -->
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6 text-center" id="whatAmI">
+                <h2>What is this?</h2>
+                <p>Alexa Guitar Tuner is an Alexa skill that helps you tune your guitar. 
+                It features the best audio quality that Amazon allows, combined with the
+                Alexa Skills SDK, to make tuning a guitar without a dedicated tuner as simple as possible.</p>
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="section">
-            <h2>Why Proper Tuning Matters</h2>
-            <p>Tuning affects the tone and playability of your guitar. A properly tuned guitar sounds great, stays in tune longer, and ensures you're playing at your best.</p>
+    </div>
+
+    <!-- YouTube Demo Section -->
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>Watch the Demo</h2>
+                <p>See how Alexa Guitar Tuner works in action.</p>
+                <div class="ratio ratio-16x9">
+                    <!-- <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="YouTube video demo"
+                        allowfullscreen></iframe> -->
+                </div>
+            </div>
         </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Guitar Tuning Skills. All rights reserved.</p>
+    </div>
+
+    <!-- Footer -->
+    <footer class="container-fluid py-3 text-center" id="footer">
+        <p>© 2024 Alexa Guitar Tuner | Created for GIMM 340</p>
     </footer>
 </body>
 </html>
