added video to website

--- a/lambda/public/index.html
+++ b/lambda/public/index.html
@@ -61,8 +61,8 @@
                 <h2>Watch the Demo</h2>
                 <p>See how Alexa Guitar Tuner works in action.</p>
                 <div class="ratio ratio-16x9">
-                    <!-- <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="YouTube video demo"
-                        allowfullscreen></iframe> -->
+                    <iframe src="https://youtube.com/shorts/pm2mo25KwTQ?si=3FH27iGRzM_fOFHl" title="YouTube video demo"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
