--- a/lambda/public/index.html
+++ b/lambda/public/index.html
@@ -60,13 +60,12 @@
             <div class="col-12 text-center">
                 <h2>Watch the Demo</h2>
                 <p>See how Alexa Guitar Tuner works in action.</p>
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://youtube.com/shorts/pm2mo25KwTQ?si=3FH27iGRzM_fOFHl" title="YouTube video demo"
-                        allowfullscreen></iframe>
-                </div>
+                <a href="https://youtube.com/shorts/pm2mo25KwTQ?si=3FH27iGRzM_fOFHl" target="_blank" class="btn btn-primary">
+                    Watch on YouTube
+                </a>
             </div>
         </div>
-    </div>
+    </div>    
 
     <!-- Footer -->
     <footer class="container-fluid py-3 text-center" id="footer">
